reworked directory and changed make file

--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@ CFLAGS = -Wall
 
 #TODO link (-o) all object files into the executable myexe
 all: fileio.o utils.o proj_refactor_file.o
-	
+	g++ -o myexe fileio.o utils.o proj_refactor_file.o
 	
 #rebuild object file if fileio.cpp, or fileio.h or constants.h changes
 #compile the .cpp file to an object file (-c)
@@ -10,11 +10,13 @@ fileio.o: ../fileio/fileio.cpp ../includes/fileio.h ../includes/constants.h
 	g++ $(CFLAGS) -c ../fileio/fileio.cpp
 	
 #TODO 
-utils.o: 
+utils.o: ../utils/utils.cpp
+	g++ -c ../utils/utils.cpp
 	
 #TODO
 proj_refactor_file.o: proj_refactor_file.cpp	
-	
+	g++ -c proj_refactor_file.cpp
 
 #TODO type 'make clean' to remove myexe and all .o files	
 clean:
+	rm myexe *.o
